fixed bug so it would look good on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 body {
   background-color: aqua;
+  width: 100vw;
 }
 h1 {
   color: rgb(34, 141, 48);
